manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: sirishakaruturi/sifyai-frontend:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-clusterissuer
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
  name: react-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: platform.sifyai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
  tls:
  - hosts:
    - platform.sifyai.com
    secretName: platform-sifyai-com-tls
